added pages for api reg

--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
 	<p>A simple python app to to view your fitbit data, and customize nominal values that are usually determined by your sex/gender setting</p>
 	<p>No official release yet, but the code is at <a href="https://github.com/Maxli-Cat/transbit">https://github.com/Maxli-Cat/transbit</a> on github, and I'm working on finishing it.</p>
 	<p>Hopefully it will be useable soon</p>
+	<p>For API regerstration, here are the <a href="terms.html">TOS</a> and <a href="privacy.html">privacy policy</a></p>
 </body>
